Fixing off-centered shop heading and back to shop link in product page

--- a/src/styles/product-detail.css
+++ b/src/styles/product-detail.css
@@ -8,9 +8,12 @@
 }
 
 .breadcrumb {
-  text-align: left;
+  text-align: left !important;
   margin-bottom: 40px;
-  padding-left: 10%;
+  padding-left: 0px !important;
+  margin-left: 0px !important;
+  display: flex !important;
+  justify-content: flex-start !important;
 }
 
 .breadcrumb button {
